# faabric

./: .env  CMakeLists.txt  docker-compose.yml
docker/: faabric.dockerfile  planner-fork-bmark.dockerfile  planner-fork.dockerfile
include/faabric/batch-scheduler/: ForcedMigrationScheduler.h  ServiceLocalityScheduler.h
include/faabric/executor/: ExecutorContext.h
include/faabric/planner/: Planner.h  PlannerApi.h  PlannerClient.h  PlannerServer.h  PlannerState.h
include/faabric/rpc/: ExternalChannel.h  FaabricChannel.h  IChannel.h  RpcClientTransport.h  RpcContext.h  RpcContextRegistry.h  RpcDependencyGraph.h  RpcMessageType.h  RpcServer.h  RpcServerBuilder.h  RpcServiceResolver.h  RpcTracker.h  RpcTransportClient.h  rpc.h
include/faabric/runner/: FaabricMain.h
include/faabric/scheduler/: Scheduler.h
include/faabric/transport/: common.h
include/faabric/util/: ScopedTelemetry.h  config.h  (+1 more)
src/batch-scheduler/: BatchScheduler.cpp  CMakeLists.txt  ForcedMigrationScheduler.cpp  ServiceLocalityScheduler.cpp
src/executor/: Executor.cpp
src/planner/: Planner.cpp  PlannerClient.cpp  PlannerEndpointHandler.cpp  PlannerServer.cpp  planner.proto
src/proto/: faabric.proto
src/rpc/: CMakeLists.txt  ExternalChannel.cpp  FaabricChannel.cpp  RpcClientTransport.cpp  RpcContext.cpp  RpcContextRegistry.cpp  RpcDependencyGraph.cpp  RpcServer.cpp  RpcServiceResolver.cpp  RpcTracker.cpp  RpcTransportClient.cpp  rpc.cpp
src/runner/: FaabricMain.cpp
src/scheduler/: Scheduler.cpp
src/transport/: PointToPointBroker.cpp
src/util/: config.cpp
tests/utils/: fixtures.h
(+10 files in other folders)
